added functional for UI